# alx_travel_app_0x03

./: .gitignore  README.md  pyproject.toml  requirements.txt
alx_travel_app/: README.md  env.example  requirements.txt
alx_travel_app/alx_travel_app/:  celery.py  celery.py  settings.py  swagger_urls.py  urls.py
alx_travel_app/listings/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
alx_travel_app/listings/management/commands/: seed.py
alx_travel_app/listings/management/data/: bookings.csv  listings.csv  locations.csv  reviews.csv  users.csv
alx_travel_app/listings/migrations/: 0001_initial.py  0002_user_phone_number_payment.py  0003_remove_payment_payment_url_booking_payment_url.py  0004_role_user_role.py
